Module Set up and LaunchBay Added
Module widget set up
LaunchBay started to set up

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -224,6 +224,11 @@ div.sheet-row900 {
 	top: 900px;
 }
 
+div.sheet-row925 {
+	position: absolute;
+	top: 925px;
+}
+
 div.sheet-row950 {
 	position: absolute;
 	top: 950px;
@@ -697,18 +702,18 @@ input[type="checkbox"].sheet-patch {
 	input[type="checkbox"].sheet-checkbox + span::before {
 		margin-right: 4px;
 		line-height: 14px;
-		text-align: center;
+		text-align: right;
 		display: inline-block;
-		vertical-align: middle;
-		content: "◎";
-		width: 14px;
-		height: 14px;
-		font-size: 12px;
+		vertical-align: baseline;
+		content: "⚪";
+		width: 8px;
+		height: 8px;
+		font-size: 8px;
 	}
 
 /* Fake checkbox checks as filled general checkboxes*/
 input[type="checkbox"]:checked.sheet-checkbox + span::before {
-	content: "◉";
+	content: "⚫";
 }
 
 /* Fake checkbox as Armour condition slot*/
@@ -841,7 +846,7 @@ input[type="radio"].sheet-D10 + span::before {
 	margin-right: 4px;
 	line-height: 12px;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: baseline;
 	width: 10px;
 	height: 10px;
 	font-size: 16px;
@@ -854,7 +859,7 @@ input[type="radio"]:checked.sheet-D10 ~ input[type="radio"].sheet-D10 + span::be
 	margin-right: 4px;
 	line-height: 12px;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: baseline;
 	width: 10px;
 	height: 10px;
 	font-size: 16px;
@@ -867,7 +872,7 @@ input[type="checkbox"].sheet-Overcharge + span::before {
 	margin-right: 4px;
 	line-height: 14px;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: baseline;
 	width: 12px;
 	height: 12px;
 	font-size: 22px;
@@ -881,7 +886,7 @@ input[type="checkbox"]:checked.sheet-Overcharge + span::before {
 	margin-right: 4px;
 	line-height: 14px;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: baseline;
 	width: 12px;
 	height: 12px;
 	font-size: 22px;
@@ -896,7 +901,7 @@ input[type="radio"].sheet-Boost + span::before {
 	margin-right: 3px;
 	line-height: 12px;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: baseline;
 	letter-spacing: 0.12em;
 	width: 10px;
 	height: 10px;
@@ -910,7 +915,7 @@ input[type="radio"]:checked.sheet-Boost ~ input[type="radio"].sheet-Boost + span
 	margin-right: 3px;
 	line-height: 12px;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: baseline;
 	letter-spacing: 0.12em;
 	width: 10px;
 	height: 10px;
@@ -928,12 +933,12 @@ input[type="radio"].sheet-ZeroDie + span::before {
 
 /* Description Damage*/
 em.sheet-techlevelBoost {
-	line-height: 14px;
+	line-height: 12px;
 	text-align: center;
-	vertical-align: middle;
-	width: 12px;
-	height: 12px;
-	font-size: 22px;
+	vertical-align: baseline;
+	width: 10px;
+	height: 10px;
+	font-size: 16px;
 	font-style: normal;
 	font-family: "dicefontd4";
 }
@@ -941,12 +946,12 @@ em.sheet-techlevelBoost {
 /* Description Advantage */
 em.sheet-FittingAdv,
 select.sheet-FittingAdv {
-	margin-right: 4px;
-	line-height: 14px;
+	line-height: 12px;
 	text-align: center;
-	vertical-align: middle;
-	height: 120%;
-	font-size: 22px;
+	vertical-align: baseline;
+	height: 10px;
+	width: 10px;
+	font-size: 16px;
 	font-family: "dicefontd10";
 	border: none;
 	font-weight: normal;
@@ -1004,8 +1009,8 @@ button[type=roll].sheet-rollButton::before {
 /* ***************************************** */
 /*               SHIP SYSTEMS                */
 /* ***************************************** */
-div.sheet-systemWidget {
-	width: 880px;
+.sheet-systemWidget {
+	width: 560px;
 	padding: 5px;
 }
 
@@ -1088,7 +1093,7 @@ div.sheet-systemWidget {
 .sheet-systemListTitle {
 	grid-area: systemListTitle;
 	font-variant: small-caps;
-	font-size: 14px;
+	font-size: 13px;
 	padding-left: 4px;
 }
 
@@ -1197,8 +1202,8 @@ input[type="number"].sheet-currentCharge {
 /*			  SHIP MODULES					 */
 /* ***************************************** */
 
-div.sheet-moduleWidget {
-	width: 880px;
+.sheet-moduleWidget {
+	width: 560px;
 	padding: 5px;
 }
 
@@ -1214,7 +1219,7 @@ div.sheet-moduleWidget {
 	background-size: 137.33px 180px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: minmax(2px,12px), minmax(20px,50px), minmax(20px,50px), minmax(20px,50px);
+	grid-template-columns: minmax(4px,6px), minmax(20px,50px), minmax(20px,50px), minmax(20px,50px);
 	grid-template-rows: repeat(10,minmax(5px,20px));
 	grid-gap: 0px;
 	height: 180px;
@@ -1243,13 +1248,34 @@ div.sheet-moduleWidget {
 	padding-top: 2px;
 }
 
+.sheet-moduleOptionalTitle {
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 14px;
+	grid-column-start: 2;
+	grid-row-start: 1;
+	grid-column-end: 5;
+	grid-row-end: 2;
+	padding-left: 6px;
+	padding-top: 2px;
+}
+
+.sheet-moduleOptionalCheckbox {
+	grid-column-start: 1;
+	grid-row-start: 1;
+	grid-column-end: 2;
+	grid-row-end: 2;
+	padding-left: 6px;
+	text-align:center;
+}
+
 .sheet-moduleDetail {
 	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 2;
 	grid-column-end: 5;
 	grid-row-end: 3;
-	padding-left: 13px;
 	padding-top: 2px;
 }
 
@@ -1278,11 +1304,11 @@ div.sheet-moduleWidget {
 
 .sheet-moduleListTitle {
 	font-variant: small-caps;
-	font-size: 14px;
+	font-size: 13px;
 	grid-column-start: 1;
-	grid-row-start: 5;
+	grid-row-start: 4;
 	grid-column-end: 5;
-	grid-row-end: 6;
+	grid-row-end: 5;
 	padding-left: 4px;
 }
 
@@ -1296,10 +1322,10 @@ div.sheet-moduleWidget {
 
 .sheet-moduleListLabTitle1 {
 	font-variant: small-caps;
-	font-size: 14px;
-	grid-column-start: 1;
+	font-size: 13px;
+	grid-column-start: 2;
 	grid-row-start: 4;
-	grid-column-end: 2;
+	grid-column-end: 5;
 	grid-row-end: 5;
 	padding-left: 4px;
 }
@@ -1314,10 +1340,10 @@ div.sheet-moduleWidget {
 
 .sheet-moduleListLabTitle2 {
 	font-variant: small-caps;
-	font-size: 14px;
+	font-size: 13px;
 	grid-column-start: 2;
 	grid-row-start: 6;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 7;
 	padding-left: 4px;
 }
@@ -1327,33 +1353,33 @@ div.sheet-moduleWidget {
 	grid-row-start: 8;
 	grid-column-end: 2;
 	grid-row-end: 9;
-	padding-left: 4px;
+	padding-left: 6px;
 }
 
 .sheet-moduleListLabTitle3 {
 	font-variant: small-caps;
-	font-size: 14px;
+	font-size: 13px;
 	grid-column-start: 2;
 	grid-row-start: 8;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 9;
 	padding-left: 4px;
 }
 
 .sheet-moduleListCost1 {
-	font-size: 14px;
+	font-size: 11px;
 	grid-column-start: 1;
 	grid-row-start: 5;
 	grid-column-end: 2;
 	grid-row-end: 6;
-	padding-left: 4px;
+	text-align: center;
 }
 
 .sheet-moduleListFitting1 {
 	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 5;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 6;
 }
 
@@ -1368,19 +1394,19 @@ div.sheet-moduleWidget {
 }
 
 .sheet-moduleListCost2 {
-	font-size: 14px;
+	font-size: 11px;
 	grid-column-start: 1;
 	grid-row-start: 6;
 	grid-column-end: 2;
 	grid-row-end: 7;
-	padding-left: 4px;
+	text-align: center;
 }
 
 .sheet-moduleListFitting2 {
 	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 6;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 7;
 }
 
@@ -1395,19 +1421,19 @@ div.sheet-moduleWidget {
 }
 
 .sheet-moduleListCost3 {
-	font-size: 14px;
+	font-size: 11px;
 	grid-column-start: 1;
 	grid-row-start: 7;
 	grid-column-end: 2;
 	grid-row-end: 8;
-	padding-left: 4px;
+	text-align: center;
 }
 
 .sheet-moduleListFitting3 {
 	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 7;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 8;
 }
 
@@ -1422,19 +1448,19 @@ div.sheet-moduleWidget {
 }
 
 .sheet-moduleListCost4 {
-	font-size: 14px;
+	font-size: 11px;
 	grid-column-start: 1;
 	grid-row-start: 8;
 	grid-column-end: 2;
 	grid-row-end: 9;
-	padding-left: 4px;
+	text-align: center;
 }
 
 .sheet-moduleListFitting4 {
 	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 8;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 9;
 }
 
@@ -1448,19 +1474,19 @@ div.sheet-moduleWidget {
 	padding-right: 4px;
 }
 .sheet-moduleListCost5 {
-	font-size: 14px;
+	font-size: 11px;
 	grid-column-start: 1;
 	grid-row-start: 9;
 	grid-column-end: 2;
 	grid-row-end: 10;
-	padding-left: 4px;
+	text-align: center;
 }
 
 .sheet-moduleListFitting5 {
 	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 9;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 10;
 }
 
@@ -1475,19 +1501,19 @@ div.sheet-moduleWidget {
 }
 
 .sheet-moduleListCost6 {
-	font-size: 14px;
+	font-size: 11px;
 	grid-column-start: 1;
 	grid-row-start: 10;
 	grid-column-end: 2;
 	grid-row-end: 11;
-	padding-left: 4px;
+	text-align: center;
 }
 
 .sheet-moduleListFitting6 {
 	font-size: 11px;
 	grid-column-start: 2;
 	grid-row-start: 10;
-	grid-column-end: 3;
+	grid-column-end: 5;
 	grid-row-end: 11;
 }
 
@@ -1498,6 +1524,133 @@ div.sheet-moduleWidget {
 	grid-row-start: 10;
 	grid-column-end: 5;
 	grid-row-end: 11;
+	padding-right: 4px;
+}
+
+
+/* ********************* Launch Bay ********************** */
+.sheet-launchBay {
+	width: 220px;
+	padding: 5px;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Shuttle.png);
+	background-size: 426.67px 364.44px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: minmax(90px,150px), minmax(0px,50px), minmax(30px,80px), minmax(90px,150px), minmax(0px,50px), minmax(30px,80px), minmax(0px,50px),;
+	grid-template-rows: repeat(18,minmax(5px,20px));
+	grid-gap: 0px;
+	height: 426.67px;
+	width: 364.44px;
+}
+/* Launch Bay text*/
+
+.sheet-launchBayTitle {
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-row-start: 1;
+	grid-column-end: 5;
+	grid-row-end: 2;
+	padding-left: 10px;
+	padding-top: 2px;
+}
+
+.sheet-launchBayDetail {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 2;
+	grid-column-end: 5;
+	grid-row-end: 3;
+	padding-top: 2px;
+}
+
+.sheet-launchBayTugTitle {
+	font-variant: small-caps;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-row-start: 4;
+	grid-column-end: 5;
+	grid-row-end: 5;
+	padding-left: 4px;
+}
+
+.sheet-launchBayTugSystem1 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+}
+
+.sheet-launchBayTugDetails1 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+}
+
+.sheet-launchBayTugSystem2 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+}
+
+.sheet-launchBayTugDetails2 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+}
+
+
+.sheet-launchBayTrailerTitle {
+	font-variant: small-caps;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-row-start: 4;
+	grid-column-end: 5;
+	grid-row-end: 5;
+	padding-left: 4px;
+}
+
+.sheet-launchBayTrailerCost1 {
+	font-size: 11px;
+	grid-column-start: 1;
+	grid-row-start: 5;
+	grid-column-end: 2;
+	grid-row-end: 6;
+	text-align: center;
+}
+
+.sheet-launchBayTrailerType1 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+}
+
+.sheet-launchBayTrailerDetails1 {
+	font-size: 11px;
+	grid-column-start: 2;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
+}
+
+.sheet-launchBayTrailerArmour1 {
+	grid-area: systemListPips1;
+	text-align: end;
+	grid-column-start: 4;
+	grid-row-start: 5;
+	grid-column-end: 5;
+	grid-row-end: 6;
 	padding-right: 4px;
 }
 
