Update added NPC tab
- NPC tab added, this new tab allows on the fly simple NPC creation without a new character sheet. Good for GMs and players.
- All skill rolls now have Success/Fail msg
- Heal Adv-Skill: Added new Heal template witch displays IntBonus
- SL modifier for all simple and dramatic rolls, displays after the SL result {e.g. Success Level -3 | +Mod 0}
- Removed Hit location from opposed rolls
- Defensive Melee weapon tick now adds +1 SL when opposing as per rulebook, uses new SL modifier field (rather then +10 to the target roll)
- Sheet Demo updated

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
@@ -15,6 +15,9 @@
 	margin-top: -13px;
 	min-width: 850px;
 }
+#myDIV {
+  width: 100%;
+}
 
 .sheet-useBackground input[value="2"]:checked ~ *.sheet-background {
 	padding: 0  3px 3px !important;
@@ -36,6 +39,12 @@
 .sheet-wrap-box {
   border: 1px solid black;
   background-color: white;
+  border-radius: 5px;
+  padding: 1px;
+}
+.sheet-wrap-box-2b {
+  border: 2px solid black;
+  background-color: rgb(227, 225, 220);
   border-radius: 5px;
   padding: 1px;
 }
@@ -593,7 +602,8 @@ input.sheet-tab-page-spellbook:checked ~ div.sheet-section-spellbook,
 input.sheet-tab-page-armor:checked ~ div.sheet-section-armor,
 input.sheet-tab-page-inventory:checked ~ div.sheet-section-inventory,
 input.sheet-tab-page-xp:checked ~ div.sheet-section-xp,
-input.sheet-tab-page-settings:checked ~ div.sheet-section-settings {
+input.sheet-tab-page-settings:checked ~ div.sheet-section-settings,
+input.sheet-tab-page-npc:checked ~ div.sheet-section-npc {
 	display: block !important;
 }
 
@@ -619,7 +629,6 @@ input[class*="sheet-tab-page"],
 span[class*="sheet-tab-page"] {
 	width: 82px;
 	height: 18px;
-	vertical-align: top;
 }
 
 span[class*="sheet-tab-page"] {
@@ -638,6 +647,20 @@ span.sheet-tab-page-armor {
 	width: 56px;
 }
 span.sheet-tab-page-armor {
+	margin-left: -56px;
+}
+input.sheet-tab-page-skills,
+span.sheet-tab-page-skills {
+	width: 56px;
+}
+span.sheet-tab-page-skills {
+	margin-left: -56px;
+}
+input.sheet-tab-page-talents,
+span.sheet-tab-page-talents {
+	width: 56px;
+}
+span.sheet-tab-page-talents {
 	margin-left: -56px;
 }
 input.sheet-tab-page-actions,
@@ -661,7 +684,13 @@ span.sheet-tab-page-settings {
 span.sheet-tab-page-settings {
 	margin-left: -30px;
 }
-
+input.sheet-tab-page-npc,
+span.sheet-tab-page-npc {
+	width: 35px;
+}
+span.sheet-tab-page-npc {
+	margin-left: -35px;
+}
 input.sheet-tab-page-core:checked + span.sheet-tab-page-core,
 input.sheet-tab-page-skills:checked + span.sheet-tab-page-skills,
 input.sheet-tab-page-talents:checked + span.sheet-tab-page-talents,
@@ -673,6 +702,7 @@ input.sheet-tab-page-inventory:checked + span.sheet-tab-page-inventory,
 input.sheet-tab-page-armor:checked + span.sheet-tab-page-armor,
 input.sheet-tab-page-xp:checked + span.sheet-tab-page-xp,
 input.sheet-tab-page-settings:checked + span.sheet-tab-page-settings,
+input.sheet-tab-page-npc:checked ~ div.sheet-tab-page-npc,
 input.sheet-tab-page-actions:checked + span.sheet-tab-page-actions,
 input.sheet-tab-page98:checked + span.sheet-tab-page98,
 input.sheet-tab-page99:checked + span.sheet-tab-page99 {
@@ -728,6 +758,53 @@ span.sheet-tab-class-action {
 	border-radius: 5px;
 }
 /* END Spell Page Settings */
+
+
+
+/* GM Page Settings */
+div[class^="sheet-gm-page"] {
+	display: none;
+}
+
+input.sheet-npc-tab1:checked ~ div.sheet-npc-tab1,
+input.sheet-npc-tab2:checked ~ div.sheet-npc-tab2,
+input.sheet-npc-tab3:checked ~ div.sheet-npc-tab3,
+input.sheet-npc-tab4:checked ~ div.sheet-npc-tab4 {
+	display: block;
+}
+
+input.sheet-npc-tab99:checked ~ div[class^="sheet-gm-page"] {
+	display: block;
+}
+
+input.sheet-npc-tab-page,
+span.sheet-npc-tab-page {
+	width: 70px;
+	height: 18px;
+}
+
+span.sheet-npc-tab-page {
+	margin-left: -73px;
+}
+
+span.sheet-npc-tab-page,
+span.sheet-tab-inventory,
+span.sheet-tab-class-action {
+	background-color: #615c50;
+}
+
+
+.sheet-spell-macro-output-options,
+.sheet-classaction-output-options,
+.sheet-action-output-options {
+	border: black 1px dashed;
+	border-radius: 5px;
+}
+/* END GM Page Settings */
+
+
+
+
 
 /* Borders for spell page and class action repeating section rows */
 .sheet-npc-row {
@@ -818,7 +895,8 @@ div[class^="sheet-inventory-page"] input {
 }
 input.sheet-tab-inventory1:checked ~ div.sheet-inventory-page1,
 input.sheet-tab-inventory2:checked ~ div.sheet-inventory-page2,
-input.sheet-tab-inventory3:checked ~ div.sheet-inventory-page3 {
+input.sheet-tab-inventory3:checked ~ div.sheet-inventory-page3,
+input.sheet-tab-inventory4:checked ~ div.sheet-inventory-page4 {
 	display: block;
 }
 
@@ -839,6 +917,7 @@ input.sheet-tab-spell99:checked ~ span.sheet-tab-spell99,
 input.sheet-tab-inventory1:checked ~ span.sheet-tab-inventory1,
 input.sheet-tab-inventory2:checked ~ span.sheet-tab-inventory2,
 input.sheet-tab-inventory3:checked ~ span.sheet-tab-inventory3,
+input.sheet-tab-inventory4:checked ~ span.sheet-tab-inventory4,
 input.sheet-tab-inventory99:checked ~ span.sheet-tab-inventory99,
 input.sheet-tab-class-action1:checked ~ span.sheet-tab-class-action1,
 input.sheet-tab-class-action2:checked ~ span.sheet-tab-class-action2,
@@ -857,6 +936,76 @@ span.sheet-tab-inventory {
 }
 
 /* END Inventory Page Settings */
+
+
+
+/* NPC Page Settings */
+div[class^="sheet-npc-page"] {
+	display: none;
+}
+div[class^="sheet-npc-page"] input {
+	line-height: 100%;
+}
+input.sheet-tab-npc1:checked ~ div.sheet-npc-page1,
+input.sheet-tab-npc2:checked ~ div.sheet-npc-page2,
+input.sheet-tab-npc3:checked ~ div.sheet-npc-page3,
+input.sheet-tab-npc4:checked ~ div.sheet-npc-page4,
+input.sheet-tab-npc5:checked ~ div.sheet-npc-page5,
+input.sheet-tab-npc6:checked ~ div.sheet-npc-page6,
+input.sheet-tab-npc7:checked ~ div.sheet-npc-page7,
+input.sheet-tab-npc8:checked ~ div.sheet-npc-page8,
+input.sheet-tab-npc9:checked ~ div.sheet-npc-page9,
+input.sheet-tab-npc10:checked ~ div.sheet-npc-page10,
+input.sheet-tab-npc90:checked ~ div.sheet-npc-page90,
+input.sheet-tab-npc91:checked ~ div.sheet-npc-page91,
+input.sheet-tab-npc92:checked ~ div.sheet-npc-page92,
+input.sheet-tab-npc93:checked ~ div.sheet-npc-page93,
+input.sheet-tab-npc94:checked ~ div.sheet-npc-page94,
+input.sheet-tab-npc95:checked ~ div.sheet-npc-page95,
+input.sheet-tab-npc96:checked ~ div.sheet-npc-page96,
+input.sheet-tab-npc97:checked ~ div.sheet-npc-page97,
+input.sheet-tab-npc98:checked ~ div.sheet-npc-page98,
+input.sheet-tab-npc99:checked ~ div.sheet-npc-page99 {
+	display: block;
+}
+
+input.sheet-tab-npc1:checked ~ span.sheet-tab-npc1,
+input.sheet-tab-npc2:checked ~ span.sheet-tab-npc2,
+input.sheet-tab-npc3:checked ~ span.sheet-tab-npc3,
+input.sheet-tab-npc4:checked ~ span.sheet-tab-npc4,
+input.sheet-tab-npc5:checked ~ span.sheet-tab-npc5,
+input.sheet-tab-npc6:checked ~ span.sheet-tab-npc6,
+input.sheet-tab-npc7:checked ~ span.sheet-tab-npc7,
+input.sheet-tab-npc8:checked ~ span.sheet-tab-npc8,
+input.sheet-tab-npc9:checked ~ span.sheet-tab-npc9,
+input.sheet-tab-npc10:checked ~ span.sheet-tab-npc10,
+input.sheet-tab-npc90:checked ~ span.sheet-tab-npc90,
+input.sheet-tab-npc91:checked ~ span.sheet-tab-npc91,
+input.sheet-tab-npc92:checked ~ span.sheet-tab-npc92,
+input.sheet-tab-npc93:checked ~ span.sheet-tab-npc93,
+input.sheet-tab-npc94:checked ~ span.sheet-tab-npc94,
+input.sheet-tab-npc95:checked ~ span.sheet-tab-npc95,
+input.sheet-tab-npc96:checked ~ span.sheet-tab-npc96,
+input.sheet-tab-npc97:checked ~ span.sheet-tab-npc97,
+input.sheet-tab-npc98:checked ~ span.sheet-tab-npc98,
+input.sheet-tab-npc99:checked ~ span.sheet-tab-npc99 {
+	background-color: #91908c;
+}
+
+input.sheet-tab-npc,
+span.sheet-tab-npc {
+	width: 5%;
+	height: 16px;
+	background-color: #d6d4ce;
+}
+
+span.sheet-tab-npc {
+	margin-left: -5%;
+	background-color: #d6d4ce;
+}
+
+/* END NPC Page Settings */
+
 
 /* General sheet/rolltemplate wide Styles */
 button, input, select, textarea,
@@ -976,6 +1125,14 @@ input {
 .sheet-border-left,
 .sheet-rolltemplate-whfrp2e .sheet-border-left {
 	border-left: 1px solid #000;
+}
+.sheet-border-right2,
+.sheet-rolltemplate-whfrp2e .sheet-border-right2 {
+	border-right: 2px solid #000;
+}
+.sheet-border-left2,
+.sheet-rolltemplate-whfrp2e .sheet-border-left2 {
+	border-left: 2px solid #000;
 }
 .sheet-border-top,
 .sheet-rolltemplate-whfrp2e .sheet-border-top {
@@ -1360,7 +1517,16 @@ input[disabled].sheet-passive-skill-score {
 .sheet-rolltemplate-whfrp2e .sheet-rt-header.sheet-action:before {
 	border-left-color: #906000;
 }
-
+/* Heal test header*/
+.sheet-rolltemplate-whfrp2e .sheet-rt-header.sheet-heal {
+	background-color: #347891;
+}
+.sheet-rolltemplate-whfrp2e .sheet-rt-header.sheet-heal:before {
+	border-right-color: #347891;
+}
+.sheet-rolltemplate-whfrp2e .sheet-rt-header.sheet-heal:before {
+	border-left-color: #347891;
+}
 /* Spell header */
 .sheet-rolltemplate-whfrp2e .sheet-rt-header.sheet-spell {
 	background-color: #505050;
@@ -1489,7 +1655,10 @@ input[disabled].sheet-passive-skill-score {
 .sheet-rolltemplate-whfrp2e .sheet-offset-3-4 {
 	margin-left: 75%;
 }
-
+.sheet-col-1-5r,
+.sheet-rolltemplate-whfrp2e .sheet-col-1-5 {
+	width: 20%;
+}
 .sheet-col-1-5,
 .sheet-rolltemplate-whfrp2e .sheet-col-1-5 {
 	width: 15%;
@@ -3600,7 +3769,10 @@ input[disabled].sheet-passive-skill-score {
 .sheet-rolltemplate-whfrp2e .sheet-offset-25-49 {
 	margin-left: 49%;
 }
-
+.sheet-col-25-1,
+.sheet-rolltemplate-whfrp2e .sheet-col-25-1 {
+	width: 1.5%;
+}
 .sheet-col-25-2,
 .sheet-rolltemplate-whfrp2e .sheet-col-25-2 {
 	width: 2%;
