--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -670,7 +670,7 @@ input.sheet-tab0 + span {
 
 .sheet-col-notebox textarea {
     height: 67px;
-    width: 98%;
+    width: 96%;
 }
 
 
@@ -1359,6 +1359,15 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 /* -- repeating traits -- */
 .sheet-traits { width: calc(100% - 0.4em); }
+
+.sheet-traits .sheet-half-size {
+    width: calc(50% - 0.1em);
+    float: left;
+}
+
+.sheet-traits .sheet-half-size.sheet-border {
+    border-right: 1px solid gray;
+}
 
 .sheet-traits .sheet-header {
     background: #f0f0f0;
