--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -885,7 +885,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-thrust-damage .sheet-tooltip { margin-left: 80px; margin-top: -200px }
 .sheet-attribute .sheet-row-swing-damage .sheet-tooltip { margin-left: 80px; margin-top: -200px}
 .sheet-encumberance .sheet-colAll .sheet-tooltip { margin-left: -215px; }
-.sheet-lift .sheet-tooltip { margin-left: -170px; }
+.sheet-lift .sheet-tooltip { margin-left: -120px; }
 .sheet-miscelleneous .sheet-tooltip { margin-left: -75px; }
 .sheet-active-defense .sheet-tooltip { margin-left: -120px; }
 .sheet-active-defense .sheet-tooltip.sheet-ad-col0-tooltip { 
@@ -957,6 +957,11 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 }
 
 /* -- GENERAL -- */
+.sheet-tab1-column2 {
+    float: left;
+    width: calc(100% - 180px - 100px - .8em);
+}
+
 .sheet-attribute { width: 180px; margin-bottom: 180px;}
 .sheet-attribute .sheet-header .sheet-col0 { width: 85px; }
 .sheet-attribute .sheet-header .sheet-col1 { width: 30px; }
@@ -1009,21 +1014,6 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     color: #404040;
 }
 
-.sheet-stats { width: 180px; }
-
-/* base height on selected point summary layout */
-input.sheet-box-stats-notes-point-summary[value="1"] + div { 
-    height: 487px;
-}
-
-input.sheet-box-stats-notes-point-summary[value="2"] + div { 
-    height: 487px;
-}
-
-input.sheet-box-stats-notes-point-summary[value="3"] + div { 
-    height: 559px;
-}
-
 .sheet-stats input { font-size: 13px;}
 .sheet-stats .sheet-header .sheet-col0 { width: 72px; }
 .sheet-stats .sheet-header .sheet-col1 { width: 41px; }
@@ -1048,6 +1038,10 @@ input.sheet-box-stats-notes-point-summary[value="3"] + div {
     text-align: center;
     font-size: 12px;
     font-weight: bold;
+}
+
+.sheet-stats .sheet-row-current-points.sheet-padding-bottom {
+    padding-bottom: 3px;
 }
 
 /* Show/Hide hit point notes */
@@ -1126,7 +1120,10 @@ input.sheet-box-stats-notes-point-summary[value="3"] + div {
 .sheet-miscelleneous .sheet-row-reactions .sheet-col1 { width: calc(100% - 80px); }
 
 /* General Tab: Notes Box */
-.sheet-general-notes-box {width: calc(100% - 180px - 180px - 100px - 1.6em);}
+.sheet-general-notes-box {
+    width: calc(100% - 186px - 5px);
+    height: 487px;
+}
 
 .sheet-general-notes-box .sheet-cell-col-100 {
     box-sizing: border-box;
@@ -1146,17 +1143,8 @@ input.sheet-box-stats-notes-point-summary[value="3"] + div {
     margin: 0;
 }
 
-/* base height on selected point summary layout */
-.sheet-general-notes-box .sheet-cell-col-100 input.sheet-general-tab-notes-point-summary[value="1"] + textarea { 
-    height: 251px;
-}
-
-.sheet-general-notes-box .sheet-cell-col-100 input.sheet-general-tab-notes-point-summary[value="2"] + textarea { 
-    height: 251px;
-}
-
-.sheet-general-notes-box .sheet-cell-col-100 input.sheet-general-tab-notes-point-summary[value="3"] + textarea { 
-    height: 323px;
+.sheet-general-notes-box textarea { 
+    height: 447px;
 }
 
 .sheet-points { width: 100px; }
@@ -1238,11 +1226,19 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     display: block;
 } 
 
-.sheet-lift { width: calc(100% - 180px - 180px - 100px - 1.6em); }
-.sheet-lift .sheet-col0 { width: 180px; }
-.sheet-lift .sheet-col1 { width: calc(100% - 180px); text-align: center; }
+.sheet-lift {
+    width: 180px;
+}
 
-.sheet-encumberance { width: calc(100% - 180px - 100px - 1.2em); }
+.sheet-lift .sheet-col0 { 
+    width: 128px; 
+}
+
+.sheet-lift .sheet-col1 { 
+    width: 50px;
+}
+
+.sheet-encumberance { width: calc(100% - 5px); }
 .sheet-encumberance .sheet-colToggle { position: relative;}
 .sheet-encumberance .sheet-col0 { width: 100px; }
 .sheet-encumberance .sheet-col0.sheet-current-label { 
@@ -1263,7 +1259,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-encumberance .sheet-row-load input { font-size: 18px; font-weight: bold; }
 
 /* Movement Feats area */
-.sheet-movement-feats { width: calc(100% - 180px - 100px - 1.2em); }
+.sheet-movement-feats { width: calc(100% - 5px); }
 
 .sheet-movement-feats .sheet-header {
     font-size: 15px;
