--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -2222,8 +2222,8 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   display: grid;
   padding: 1px 0 1px 0;
   grid-column-gap: 2px;
-  grid-row-gap: 2px;
-  grid-template-columns: auto 3em 3em;
+  grid-row-gap: 0;
+  grid-template-columns: auto 3em 3em 3em;
 }
 
 .sheet-skills-grid>span>div {
@@ -2233,8 +2233,33 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   padding: 0;
 }
 
+.sheet-skills-grid button {
+  text-align: left;
+  padding-left: 1.5em;
+}
+
+.sheet-skills-box1 {
+  grid-column: 1/5;
+  grid-row-start: 1;
+}
+
+.sheet-skills-box2 {
+  grid-column: 2/3;
+  grid-row-start: 1;
+}
+
+.sheet-skills-box3 {
+  grid-column-start: 3;
+  grid-row-start: 1;
+}
+
+.sheet-skills-box4 {
+  grid-column-start: 4;
+  grid-row-start: 1;
+}
+
 .sheet-skills-row .sheet-skills-row2 {
-  grid-column: 1/4;
+  grid-column: 1/5;
   grid-row-start: 2;
   grid-template-columns: 100%;
 }
@@ -2253,13 +2278,13 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   grid-column: 1/6;
   grid-row-start: 2;
   grid-template-columns: auto 2em 2em 2em 2em;
-  height: 1.2em;
-  align-content: end;
 }
 
 .sheet-skills-box5 {
   grid-column-start: 1;
   grid-row-start: 1;
+  padding: 0px 0 4px 0;
+  margin: -15px 0 0 0;
 }
 
 .sheet-skills-box6 {
@@ -2279,26 +2304,6 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 .sheet-skills-box9 {
   grid-column-start: 5;
-  grid-row-start: 1;
-}
-
-.sheet-skills-grid button {
-  text-align: left;
-  padding-left: 1.5em;
-}
-
-.sheet-skills-box1 {
-  grid-column: 1/4;
-  grid-row-start: 1;
-}
-
-.sheet-skills-box2 {
-  grid-column: 2/3;
-  grid-row-start: 1;
-}
-
-.sheet-skills-box3 {
-  grid-column-start: 3;
   grid-row-start: 1;
 }
 
