bug fixes in skills & core weapons

--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -77,6 +77,7 @@ include src/pug/_variables.pug
 								fieldset(class='repeating_' + key)
 									- const skillsRepeatingSection = `@{repeating_${val[0]}`+'_${x}';
 
+									input(name='attr_display' type='hidden')
 									input(name='attr_display_rating' type='hidden')
 									input(name='attr_display_specialization' type='hidden' value='')
 									input(name='attr_display_limit' type='hidden' value=val[2])
