Fixed broken Ship Vital Conditions
The Vital condition wouldn't click. Removed extranious :checked
Switched checked="true" to the more corrrect checked="checked"

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -2778,7 +2778,7 @@ input[type=number].sheet-txtfield
 	margin-left: -24px;
 }
 
-.sheet-ship-block .sheet-ship-vital input[type="checkbox"]:checked + span.sheet-vital-x
+.sheet-ship-block .sheet-ship-vital input[type="checkbox"] + span.sheet-vital-x
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital2.png);
 	background-size: 24px 24px;
@@ -3029,66 +3029,6 @@ div.sheet-colorselector
 	height: 20px;
 	width: 125px;
 }
-
-/* old color selector with buttons
-input[type="radio"].sheet-colorselector{
-  opacity: 0.5;
-  z-index: 2;
-}
-
-input[type="radio"].sheet-colorselector +span::before{
-  content: "■";
-  opacity: 0;
-  font-size: 38px;
-  width: 20px;
-  height: 20px;
-  position: relative;
-  left: -20px;
-  top: -19px;
-  text-align: center;
-}
-
-span.sheet-red::before{
-  color: red;
-}
-span.sheet-blue::before{
-  color: blue;
-}
-span.sheet-green::before{
-  color: green;
-}
-span.sheet-black::before{
-  color: black;
-}
-span.sheet-place-label::before{
-	color: black;
-    content: "L";
-    font-size: 25px;
-    width: 20px;
-    height: 20px;
-    position: relative;
-    left: -15px;
-    top: -7px;
-    text-align: center;
-    font-weight: bold;
-}
-
-span.sheet-place-x::before{
-	content: "X";
-}
-
-div.sheet-colorselector span{
-  width: 5px;
-}
-
-input[type="radio"].sheet-colorselector:checked +span::before{
-  opacity: 0.8;
-}
-
-input[type="radio"].sheet-colorselector:checked +span.sheet-label-place::before{
-  opacity: 1;
-}*/
-
 
 /*     Sheet header layout    */
 
